[gd_scene load_steps=55 format=2]

[ext_resource path="res://SFX/JGJ_Grunt_2.ogg" type="AudioStream" id=1]
[ext_resource path="res://UI/EnemyHealth/EnemyHealth.gd" type="Script" id=2]
[ext_resource path="res://UI/Caution.gd" type="Script" id=3]
[ext_resource path="res://UI/VHS.gd" type="Script" id=4]
[ext_resource path="res://UI/digital_7/Digital7Mono.tres" type="DynamicFont" id=5]
[ext_resource path="res://SFX/JGJ_You_Shall_Faulter_brighter_1.ogg" type="AudioStream" id=6]
[ext_resource path="res://SFX/JGJ_player_hurt_2.ogg" type="AudioStream" id=7]
[ext_resource path="res://BeatSpawn.gd" type="Script" id=8]
[ext_resource path="res://UI/CautionTape.gd" type="Script" id=9]
[ext_resource path="res://pulse.gd" type="Script" id=10]
[ext_resource path="res://PlayerHealth.gd" type="Script" id=11]
[ext_resource path="res://Shaders/VHS/VHS.shader" type="Shader" id=12]
[ext_resource path="res://UI/Caution/Caution.png" type="Texture" id=13]
[ext_resource path="res://SFX/JGJ_Enemy_Hurt_Grunt_4.ogg" type="AudioStream" id=14]
[ext_resource path="res://Music/JGJ_game_over_music.ogg" type="AudioStream" id=15]
[ext_resource path="res://SFX/JGJ_Grunt_1.ogg" type="AudioStream" id=16]
[ext_resource path="res://SFX/JGJ_Your_Fate_Is_Sealed.ogg" type="AudioStream" id=17]
[ext_resource path="res://SFX/JGJ_TKO.ogg" type="AudioStream" id=18]
[ext_resource path="res://Scenes/Gameplay.gd" type="Script" id=19]
[ext_resource path="res://SoundPlayer.gd" type="Script" id=20]
[ext_resource path="res://SFX/JGJ_321_Fight_Half_time.ogg" type="AudioStream" id=21]
[ext_resource path="res://UI/CountDown/Titles.png" type="Texture" id=22]
[ext_resource path="res://SFX/JGJ_Enemy_Death.ogg" type="AudioStream" id=23]
[ext_resource path="res://UI/TimeRemaining.gd" type="Script" id=24]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=25]
[ext_resource path="res://UI/HealthBar/HealthBar.tscn" type="PackedScene" id=26]
[ext_resource path="res://Shaders/VHS/VHS.gd" type="Script" id=27]
[ext_resource path="res://SFX/ESM_Undead_Vocal_I_Am_Starting_To_Dislike_You.wav" type="AudioStream" id=28]
[ext_resource path="res://SFX/ESM_Undead_Vocal_Jump_Big_Windup.wav" type="AudioStream" id=29]
[ext_resource path="res://SFX/JGJ_Try_This_Brighter_1.ogg" type="AudioStream" id=30]
[ext_resource path="res://UI/TempoDiamond.png" type="Texture" id=31]
[ext_resource path="res://UI/TempoBar.png" type="Texture" id=32]
[ext_resource path="res://UI/digital_7/Digital7Regular.tres" type="DynamicFont" id=33]
[ext_resource path="res://UI/Caution/Z.png" type="Texture" id=34]
[ext_resource path="res://SFX/JGJ_You_Lose_Voice.ogg" type="AudioStream" id=35]
[ext_resource path="res://SFX/JGJ_Enemy_Roar_1.ogg" type="AudioStream" id=36]
[ext_resource path="res://SFX/JGJ_KO_Voice.ogg" type="AudioStream" id=37]
[ext_resource path="res://SFX/JGJ_Enemy_Horizontal_Swipe.ogg" type="AudioStream" id=38]
[ext_resource path="res://SFX/JGJ_Enemy_Hurt_Grunt_1.ogg" type="AudioStream" id=39]
[ext_resource path="res://SFX/JGJ_Enemy_Hurt_Grunt_3.ogg" type="AudioStream" id=40]
[ext_resource path="res://SFX/JGJ_Grunt_3.ogg" type="AudioStream" id=41]
[ext_resource path="res://SFX/JGJ_Grunt_4.ogg" type="AudioStream" id=42]
[ext_resource path="res://SFX/JGJ_Enemy_Vertical_Swipe.ogg" type="AudioStream" id=43]
[ext_resource path="res://SFX/JGJ_Enemy_Hurt_Grunt_2.ogg" type="AudioStream" id=44]
[ext_resource path="res://SFX/JGJ_player_hurt_1.ogg" type="AudioStream" id=45]
[ext_resource path="res://SFX/JGJ_Player_Death.ogg" type="AudioStream" id=46]
[ext_resource path="res://SFX/JGJ_You_Win.ogg" type="AudioStream" id=47]
[ext_resource path="res://Arena/Arena.tscn" type="PackedScene" id=48]
[ext_resource path="res://Enemies/Enemy.tscn" type="PackedScene" id=49]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 12 )
shader_param/time = 0.0
shader_param/strength = 1.0
shader_param/apply_noise = false

[sub_resource type="Animation" id=2]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1.5, 1.5 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Appear"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Tape/Z:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 2, 1 ),
"update": 0,
"values": [ Vector2( 1, 1e-05 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Tape/CautionTop:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 640, 385.473 ), Vector2( 640, 309.231 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Tape/CautionBottom:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 640, 411.064 ), Vector2( 640, 488.372 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Tape:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Appear"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Titles:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.4 ),
"transitions": PoolRealArray( 1, 2, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.3, 1.3 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TitleAnimation:playback_speed")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 4.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Titles:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Titles:offset")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = false
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 2, 1 ),
"update": 0,
"values": [ Vector2( 0, -100 ), Vector2( 0, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Titles:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = false
tracks/4/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 45.0, 0.0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Flash"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="Gameplay" type="Node2D"]
script = ExtResource( 19 )

[node name="Arena" parent="." instance=ExtResource( 48 )]
position = Vector2( 2.00778, -1.09399 )

[node name="Enemy" parent="." instance=ExtResource( 49 )]
position = Vector2( 1.5603, 0.780151 )

[node name="Player" parent="." instance=ExtResource( 25 )]

[node name="SoundPlayer" type="Node2D" parent="."]
script = ExtResource( 20 )

[node name="Dislike" type="AudioStreamPlayer" parent="SoundPlayer"]
stream = ExtResource( 28 )

[node name="ParadiddleRoar" type="AudioStreamPlayer" parent="SoundPlayer"]
stream = ExtResource( 36 )

[node name="RoarTwo" type="AudioStreamPlayer" parent="SoundPlayer"]
stream = ExtResource( 36 )

[node name="EnemyDeath" type="AudioStreamPlayer" parent="SoundPlayer"]
stream = ExtResource( 23 )

[node name="EnemyHurt1" type="AudioStreamPlayer" parent="SoundPlayer"]
stream = ExtResource( 39 )

[node name="EnemyHurt2" type="AudioStreamPlayer" parent="SoundPlayer"]
stream = ExtResource( 44 )

[node name="EnemyHurt3" type="AudioStreamPlayer" parent="SoundPlayer"]
stream = ExtResource( 40 )

[node name="EnemyHurt4" type="AudioStreamPlayer" parent="SoundPlayer"]
stream = ExtResource( 14 )

[node name="EnemyGrunt1" type="AudioStreamPlayer" parent="SoundPlayer"]
stream = ExtResource( 16 )

[node name="EnemyGrunt2" type="AudioStreamPlayer" parent="SoundPlayer"]
stream = ExtResource( 1 )

[node name="EnemyGrunt3" type="AudioStreamPlayer" parent="SoundPlayer"]
stream = ExtResource( 41 )

[node name="EnemyGrunt4" type="AudioStreamPlayer" parent="SoundPlayer"]
stream = ExtResource( 42 )

[node name="PlayerDeath" type="AudioStreamPlayer" parent="SoundPlayer"]
stream = ExtResource( 46 )

[node name="HorizontalSwipe" type="AudioStreamPlayer" parent="SoundPlayer"]
stream = ExtResource( 38 )

[node name="VerticalSwipe" type="AudioStreamPlayer" parent="SoundPlayer"]
stream = ExtResource( 43 )

[node name="Windup" type="AudioStreamPlayer" parent="SoundPlayer"]
stream = ExtResource( 29 )

[node name="TryThis" type="AudioStreamPlayer" parent="SoundPlayer"]
stream = ExtResource( 30 )

[node name="Falter" type="AudioStreamPlayer" parent="SoundPlayer"]
stream = ExtResource( 6 )

[node name="Sealed" type="AudioStreamPlayer" parent="SoundPlayer"]
stream = ExtResource( 17 )

[node name="PlayerHurt1" type="AudioStreamPlayer" parent="SoundPlayer"]
stream = ExtResource( 45 )

[node name="PlayerHurt2" type="AudioStreamPlayer" parent="SoundPlayer"]
stream = ExtResource( 7 )

[node name="VHS" type="BackBufferCopy" parent="."]
position = Vector2( 0.780151, -0.780151 )
z_index = 100
copy_mode = 2
rect = Rect2( -320, -180, 1920, 1080 )
script = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="ColorRect" type="ColorRect" parent="VHS"]
visible = false
material = SubResource( 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -320.0
margin_top = -180.0
margin_right = -320.0
margin_bottom = -180.0
script = ExtResource( 27 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="VHS"]

[node name="HUD" type="CanvasLayer" parent="."]

[node name="TempoBar" type="Sprite" parent="HUD"]
position = Vector2( 639.307, 112.082 )
texture = ExtResource( 32 )

[node name="BeatSpawn" type="Node" parent="HUD"]
script = ExtResource( 8 )

[node name="TempoSpawn" type="Node2D" parent="HUD/BeatSpawn"]
position = Vector2( 270.715, 114.718 )

[node name="PlayerHealth" type="Node2D" parent="HUD"]
position = Vector2( 823.072, 612.705 )
script = ExtResource( 11 )

[node name="HealthBar" parent="HUD/PlayerHealth" instance=ExtResource( 26 )]
position = Vector2( 454.833, -603.843 )
scale = Vector2( -1, 1 )

[node name="Label" type="Label" parent="HUD/PlayerHealth"]
margin_left = 249.766
margin_top = -529.061
margin_right = 412.766
margin_bottom = -500.061
custom_fonts/font = ExtResource( 33 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "TURBO BRAWLER"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnemyHealth" type="Node2D" parent="HUD"]
position = Vector2( 140.665, 94.9475 )
script = ExtResource( 2 )

[node name="HealthBar" parent="HUD/EnemyHealth" instance=ExtResource( 26 )]
position = Vector2( -139.648, -83.477 )

[node name="Label" type="Label" parent="HUD/EnemyHealth"]
margin_left = -77.1025
margin_top = -8.87237
margin_right = 76.8975
margin_bottom = 20.1276
custom_fonts/font = ExtResource( 33 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Maxx 3000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pulse" type="Sprite" parent="HUD"]
position = Vector2( 639.166, 112.887 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 31 )
script = ExtResource( 10 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="HUD/Pulse"]
anims/pulse = SubResource( 2 )

[node name="HUD" type="Node2D" parent="HUD"]

[node name="TimeRemaining" type="Label" parent="HUD"]
margin_left = 566.736
margin_top = 7.86943
margin_right = 710.736
margin_bottom = 52.8694
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 1, 0.996078, 0.592157, 1 )
text = "1:47"
align = 1
script = ExtResource( 24 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="CautionTape" type="Node2D" parent="HUD"]
script = ExtResource( 9 )

[node name="Tape" type="Node2D" parent="HUD/CautionTape"]
modulate = Color( 1, 1, 1, 0 )

[node name="CautionTop" type="Sprite" parent="HUD/CautionTape/Tape"]
position = Vector2( 640, 385.473 )
texture = ExtResource( 13 )
region_enabled = true
region_rect = Rect2( 0, 0, 1280, 33 )
script = ExtResource( 3 )
scroll_rate = 100

[node name="CautionBottom" type="Sprite" parent="HUD/CautionTape/Tape"]
position = Vector2( 640, 411.064 )
texture = ExtResource( 13 )
region_enabled = true
region_rect = Rect2( 0, 0, 1280, 33 )
script = ExtResource( 3 )
scroll_rate = -100

[node name="Z" type="Sprite" parent="HUD/CautionTape/Tape"]
position = Vector2( 640, 397.321 )
scale = Vector2( 1, 1e-05 )
texture = ExtResource( 34 )
region_enabled = true
region_rect = Rect2( 0, 0, 1280, 159 )

[node name="CautionAnimation" type="AnimationPlayer" parent="HUD/CautionTape"]
playback_speed = 2.0
anims/Appear = SubResource( 3 )

[node name="Titles" type="Sprite" parent="HUD/CautionTape"]
position = Vector2( 640, 402.098 )
texture = ExtResource( 22 )
vframes = 3
hframes = 3
frame = 8

[node name="TitleAnimation" type="AnimationPlayer" parent="HUD/CautionTape"]
playback_speed = 4.0
anims/Appear = SubResource( 4 )

[node name="CountdownSound" type="AudioStreamPlayer" parent="HUD/CautionTape"]
stream = ExtResource( 21 )

[node name="GameOver" type="AudioStreamPlayer" parent="HUD/CautionTape"]
stream = ExtResource( 15 )
volume_db = -7.0

[node name="YouLose" type="AudioStreamPlayer" parent="HUD/CautionTape"]
stream = ExtResource( 35 )

[node name="YouWin" type="AudioStreamPlayer" parent="HUD/CautionTape"]
stream = ExtResource( 47 )

[node name="KO" type="AudioStreamPlayer" parent="HUD/CautionTape"]
stream = ExtResource( 37 )

[node name="TKO" type="AudioStreamPlayer" parent="HUD/CautionTape"]
stream = ExtResource( 18 )

[node name="Label" type="Label" parent="HUD"]
visible = false
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = 200.806
margin_bottom = 245.806
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 1, 0.996078, 0.592157, 1 )
text = "Press UP"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="HUD/Label"]
playback_speed = 0.3
anims/Flash = SubResource( 5 )
